# rad

./: .gitignore  manage.py  pyproject.toml  requirements.txt
notas/: admin.py  models.py  urls.py  views.py
notas/migrations/: 0001_initial.py  0002_remove_aluno_materias_remove_materia_alunos_and_more.py  0003_aluno_statusmatricula.py  0004_rename_materiasmatriculadas_aluno_materias_matriculadas.py  0005_rename_createdat_aluno_created_at_and_more.py  0006_remove_aluno_materias_matriculadas_and_more.py
notas/templates/notas/: detail.html  detail_materia.html  index.html
projeto_av/: asgi.py  settings.py  urls.py  wsgi.py
rad_notas/: __init__.py
rad_notas/db/: aluno.py  aluno_materia.py  avaliacao.py  base_model.py  materia.py
src/: aluno.py
